--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "exhandlers",
   "description": "Utility middlewares for working with ExpressJs",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Running tests...\" && exit 0",
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/pr4j3sh/exhandlers#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5"
   }
 }
