added build with esbuild

--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "exhandlers",
   "description": "Utility middlewares for working with ExpressJs",
   "version": "1.0.6",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "scripts": {
     "test": "echo \"Running tests...\" && exit 0",
-    "build": "echo \"Build completed.\"",
-    "dev": "node ."
+    "build": "node esbuild.config.js",
+    "dev": "node index.js"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "express",
     "expressjs",
@@ -30,5 +33,8 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "esbuild": "^0.24.0"
   }
 }
