--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "homepage": "https://github.com/pr4j3sh/exhandlers#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "esbuild": "^0.24.0"
