--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "cors": "^2.8.5",
     "mongoose": "^8.8.3",
     "morgan": "^1.10.0",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "esbuild": "^0.24.0"
