--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "mongoose": "^8.8.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
     "redis": "^4.7.0",
     "winston": "^3.17.0"
