--- a/package.json
+++ b/package.json
@@ -31,16 +31,20 @@
   },
   "homepage": "https://github.com/pr4j3sh/exhandlers#readme",
   "dependencies": {
+    "amqplib": "^0.10.5",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "express-rate-limit": "^7.5.0",
     "mongoose": "^8.8.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
     "redis": "^4.7.0",
+    "socket.io": "^4.8.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "esbuild": "^0.24.0"
+    "esbuild": "^0.24.0",
+    "jsdoc": "^4.0.4"
   }
 }
