--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "exhandlers",
   "description": "Utility middlewares for working with ExpressJs",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "dist/bundle.js",
   "scripts": {
     "test": "echo \"Running tests...\" && exit 0",
@@ -36,6 +36,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express-rate-limit": "^7.5.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
